# TheContacts

services/api/: .pdm-python  .pdm.toml  pyproject.toml
services/api/src/thecontacts/: main.py
services/api/src/thecontacts/data/database/: config.py  db.py
services/api/src/thecontacts/models/: contacts.py  spams.py  user.py
services/api/src/thecontacts/repositories/: UserRepository.py
services/api/src/thecontacts/routes/users/: create.py
services/api/src/thecontacts/schemas/: contact.py  spam.py  user.py
services/api/src/thecontacts/utilities/: validators.py
